[gd_scene load_steps=16 format=2]

[ext_resource path="res://tiles/tiles.png" type="Texture" id=1]
[ext_resource path="res://objects/Whale.gd" type="Script" id=2]
[ext_resource path="res://objects/whale.png" type="Texture" id=3]
[ext_resource path="res://objects/eye.png" type="Texture" id=4]
[ext_resource path="res://objects/spout.png" type="Texture" id=5]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("KinematicBody2D/Spout:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("KinematicBody2D/Spout:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 416, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("KinematicBody2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("KinematicBody2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -288, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "activate"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("KinematicBody2D/Spout:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("KinematicBody2D/Spout:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 416, -0.25, 0, 0.25, 0, -448, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=5]
resource_name = "deactivate"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("KinematicBody2D/Spout:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("KinematicBody2D/Spout:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -448, -0.25, 0, 0.25, 0, 416, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=10]
resource_name = "wait"
length = 5.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("KinematicBody2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("KinematicBody2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -288, -0.25, 0, 0.25, 0, -256, -0.25, 0, 0.25, 0, -320, -0.25, 0, 0.25, 0, -288, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3, 4 )
}

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 290, 1024 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 290, 0, 290, 1024 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "main",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 7936 )

[sub_resource type="CircleShape2D" id=7]
radius = 313.0

[node name="Whale" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/activate = SubResource( 4 )
anims/deactivate = SubResource( 5 )
anims/wait = SubResource( 10 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 0, -288 )
collision_layer = 129
collision_mask = 129

[node name="Spout" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 0, 416 )
frames = SubResource( 3 )
animation = "main"
playing = true

[node name="Area2D" type="Area2D" parent="KinematicBody2D/Spout"]
position = Vector2( 0, -36 )
scale = Vector2( 0.5, 0.0625 )
space_override = 3
gravity_vec = Vector2( 0, -1 )
gravity = 4091.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Spout/Area2D"]
position = Vector2( 0, 832 )
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -322, 7 )
texture = ExtResource( 3 )
centered = false

[node name="Eye" type="Sprite" parent="KinematicBody2D/Body"]
position = Vector2( 258, 217 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -12, 320 )
shape = SubResource( 7 )

[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
